--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
                                     <a class="nav-link text-decoration-none navbar-text-color home-margin-top" href="index.html">Illuminati<span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-decoration-none navbar-text-color" href="#">About us</a>
+                                    <a class="nav-link text-decoration-none navbar-text-color" href="#aboutSection">About us</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-decoration-none navbar-text-color" href="#">People of Illumination</a>
+                                    <a class="nav-link text-decoration-none navbar-text-color" href="#IlluminatiPeople">People of Illumination</a>
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link text-decoration-none navbar-text-color" href="#">Our Belief</a>
+                                    <a class="nav-link text-decoration-none navbar-text-color" href="#corebelief">Our Belief</a>
                                 </li>
 
                             </ul>
@@ -87,8 +87,8 @@
                                     We appreciate your interest in our organization. Use our official website for details on our members, contact information, how to join the Illuminati, our beliefs, message archives, and more.</p>
 
                                 <div class="btn-talk ml-auto">
-                                    <ul class="m-0 p-0">
-                                        <li class="list-unstyled d-lg-inline-block"><a class="nav-link contact" href="join.html">Join Us</a></li>
+                                    <ul class="m-0 p-0 join-us-box">
+                                        <li class="list-unstyled d-lg-inline-block"><a class="nav-link contact join-us" href="#joinus">Join Us</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -97,7 +97,7 @@
                         <div class="col-lg-6 col-md-6 col-sm-12">
                             <div class="banner-img-content position-relative" data-aos="fade-up">
                                 <figure class="banner-img mb-0 wow slideInRight" data-wow-duration="2s">
-                                    <img class="img-fluid banner-img-width" src="assets/illuminati-secret-society-symbol.png" alt="illuminati" style="margin-top: -150px;" />
+                                    <img class="img-fluid banner-img-width illuminati-img" src="assets/illuminati-secret-society-symbol.png" alt="illuminati" style="margin-top: -150px;" />
                                 </figure>
                             </div>
                         </div>
@@ -160,12 +160,12 @@
         </div>
     </section>
 
-    <section class="about-us-section-start">
+    <section class="about-us-section-start" id="aboutSection">
         <div class="about-right-icon position-relative" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
             <figure class="whyus-icon"><img src="./assets/images/about-us-section-right-icon.png" alt="" class="img-fluid">
             </figure>
         </div>
-        <div class="container">
+        <div class="container" id="corebelief">
             <div class="row">
                 <div class="col-12">
                     <h3 class="text-center" data-aos="fade-up" data-aos-anchor-placement="top-bottom">OUR CORE BELIEFS</h3>
@@ -181,7 +181,7 @@
                         </div>
                         <h4>THE PYRAMID</h4>
                         <p class="security-services-p">Money is not the root of all evil, money is the route to all freedom. The selfish pursuit of money is a hollow goal, but the pursuit of the goodness that money can create is one of humanity’s greatest responsibilities.</p>
-                        <a href="#" class="text-decoration-none ">Learn More <span class="forword-arrow"><i
+                        <a href="#" class="text-decoration-none d-none">Learn More <span class="forword-arrow"><i
                                     class="fa fa-angle-right"></i></span></a>
                     </div>
                 </div>
@@ -194,7 +194,7 @@
                         </div>
                         <h4>THE EYE</h4>
                         <p class="security-services-p">Living humans evolve at a rapid pace and continue to advance in ability through study, practice, and self-improvement. The human species is guarded by a coalition of its most elite members called the Illuminati.</p>
-                        <a href="#" class="text-decoration-none ">Learn More <span class="forword-arrow"><i
+                        <a href="#" class="text-decoration-none d-none">Learn More <span class="forword-arrow"><i
                                     class="fa fa-angle-right"></i></span></a>
                     </div>
                 </div>
@@ -207,7 +207,7 @@
                         </div>
                         <h4>THE LIGHT</h4>
                         <p class="security-services-p">Every human is guided by an inner compass that points toward the Light, revealing truth and direction amidst decisions. All human spiritual beliefs ultimately seek the Light in ways differing only in form and function.</p>
-                        <a href="#" class="text-decoration-none ">Learn More <span class="forword-arrow"><i
+                        <a href="#" class="text-decoration-none d-none">Learn More <span class="forword-arrow"><i
                                     class="fa fa-angle-right"></i></span></a>
                     </div>
                 </div>
@@ -220,7 +220,7 @@
                         </div>
                         <h4>THE ETERNAL</h4>
                         <p class="security-services-p">Every human is one part of a larger, eternal design – individual gears in a clock that has no end. Though they may never realize it, a person’s actions have the power to alter the future of the entire world.</p>
-                        <a href="#" class="text-decoration-none ">Learn More <span class="forword-arrow"><i
+                        <a href="#" class="text-decoration-none d-none">Learn More <span class="forword-arrow"><i
                                     class="fa fa-angle-right"></i></span></a>
                     </div>
                 </div>
@@ -257,7 +257,8 @@
             <div class="row">
                 <div class="col-lg-5 col-md-5 col-sm-12">
                     <div class="cyber-content-img" data-aos="fade-up-left">
-                        <figure class="mb-0" style="width:500px"><img style="width: inherit; height:inherit;" src="https://image.lexica.art/full_jpg/c7babb89-4977-40a5-bf1d-e41af8585c70" alt="" class="cyber-security-provider-img">
+                        <figure class="mb-0" style="width:500px" id="IlluminatiPeople">
+                            <img style="width: inherit; height:inherit;" src="https://image.lexica.art/full_jpg/c7babb89-4977-40a5-bf1d-e41af8585c70" alt="" class="cyber-security-provider-img">
                         </figure>
                     </div>
                 </div>
@@ -275,7 +276,7 @@
 
 
     <section class="blogs-section-starts form-section-starts pricing-form-section overflow-hidden">
-        <div class="container">
+        <div class="container" id="joinus">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12">
                     <div class="form-section" data-aos="fade-up">
@@ -295,8 +296,11 @@
                                 <div class="form-group contact-form-margin">
                                     <input type="text" class="form-control input-text" id="validationCustom03" placeholder="Phone" required="" name="phone">
                                 </div>
+                                <div class="form-group contact-form-margin">
+                                    <input type="text" class="form-control input-text" id="validationCustom03" placeholder="Telegram username (if available)" name="telegram">
+                                </div>
 
-                                <div class="form-button  text-center">
+                                <div class="form-button text-center">
                                     <button class="btn btn-form-section-pricing" id="toConference" type="submit">Join Us</button>
                                 </div>
 
