--- a/conference.html
+++ b/conference.html
@@ -61,6 +61,14 @@
                                 <li class="nav-item">
                                     <a class="nav-link text-decoration-none navbar-text-color" href="#">Our Belief</a>
                                 </li>
+
+                                <li class="nav-item">
+                                    <a class="nav-link text-decoration-none navbar-text-color" href="/index.html#joinus">Join Us</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-decoration-none navbar-text-color" href="mailto:info@illuminatiforever.us">Contact Us</a>
+                                </li>
+
                             </ul>
                             <div class="btn-talk ml-auto">
                                 <ul class="m-0 p-0">
@@ -195,6 +203,9 @@
                     <div class="footer-bar-content w-100 overflow-hidden">
                         <p class="text-size-16 mb-0">
                             Copyright ©2023 Illuminati. All Rights Reserved
+                        </p>
+                        <p class="text-size-16 mb-0">
+                            <a href="mailto:info@illuminatiforever.us">info@illuminatiforever.us</a>
                         </p>
                     </div>
                 </div>
