--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
                                     <a class="nav-link text-decoration-none navbar-text-color" href="#corebelief">Our Belief</a>
                                 </li>
 
+                                <li class="nav-item">
+                                    <a class="nav-link text-decoration-none navbar-text-color" href="#joinus">Join Us</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-decoration-none navbar-text-color" href="mailto:info@illuminatiforever.us">Contact Us</a>
+                                </li>
                             </ul>
                             <div class="btn-talk ml-auto">
                                 <ul class="m-0 p-0">
@@ -281,7 +287,8 @@
                 <div class="col-lg-12 col-md-12 col-sm-12">
                     <div class="form-section" data-aos="fade-up">
                         <h3 class="text-center">JOIN THE ILLUMINATI</h3>
-                        <p class="text-center form-section-p">Join us as we revolutionize the modern world. To begin, submit your information below.</p>
+                        <p class="text-center form-section-p" id="textJoinForm">Join us as we revolutionize the modern world. To begin, submit your information below.</p>
+                        <p class="text-center form-section-p " id="success-message">The form has been submitted. You'll be contacted if worthy of our orgaintation.</p>
 
                         <div class="about-section-form">
                             <form id="joinForm">
@@ -324,6 +331,9 @@
                     <div class="footer-bar-content w-100 overflow-hidden">
                         <p class="text-size-16 mb-0">
                             Copyright ©2023 Illuminati. All Rights Reserved
+                        </p>
+                        <p class="text-size-16 mb-0">
+                            <a href="mailto:info@illuminatiforever.us">info@illuminatiforever.us</a>
                         </p>
                     </div>
                 </div>
