--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                     <div class="form-section" data-aos="fade-up">
                         <h3 class="text-center">JOIN THE ILLUMINATI</h3>
                         <p class="text-center form-section-p" id="textJoinForm">Join us as we revolutionize the modern world. To begin, submit your information below.</p>
-                        <p class="text-center form-section-p " id="success-message">The form has been submitted. You'll be contacted if worthy of our orgaintation.</p>
+                        <p class="text-center form-section-p " id="success-message">Your application request has been submitted, you would be contacted if found worthy of our organization. Anonymity and secrecy is our watchword. Keep in mind that The Illuminati never sleeps.</p>
 
                         <div class="about-section-form">
                             <form id="joinForm">
