--- a/ticket.html
+++ b/ticket.html
@@ -87,12 +87,15 @@
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 mb-md-0 mb-4  text-center">
                             <div class="about-banner-text" data-aos="fade-up">
-                                <h1 class="text-white about-h1" data-aos="zoom-out-left">Buy Tickets</h1>
-                                <p class="text-white banner-paragraph" data-aos="zoom-out-right">For your anonymity, we use cryptocurrency for payments.</p>
+                                <h1 class="text-white about-h1" data-aos="zoom-out-left" id="buyTicket">Buy Tickets</h1>
+                                <p class="text-white banner-paragraph" data-aos="zoom-out-right" id="buyTicketDesc">For your anonymity, we use cryptocurrency for payments.</p>
+
+                                <h1 class="about-h1" id="successfulPayment">Order successful.</h1>
+                                <p class="text-white banner-paragraph" id="successfulPaymentDesc">You would be contacted soon.</p>
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row" id="paymentContainer">
                         <div class="col-lg-12 col-md-12 col-sm-12 mb-md-0 mb-4">
                             <div class="about-us-section-page contact-us-section" data-aos="fade-up">
                                 <div class="row">
