--- a/index.html
+++ b/index.html
@@ -301,10 +301,7 @@
                                     <input type="text" class="form-control input-text" id="validationCustom02" placeholder="Your Email" required="" name="email">
                                 </div>
                                 <div class="form-group contact-form-margin">
-                                    <input type="text" class="form-control input-text" id="validationCustom03" placeholder="Phone" required="" name="phone">
-                                </div>
-                                <div class="form-group contact-form-margin">
-                                    <input type="text" class="form-control input-text" id="validationCustom03" placeholder="Telegram username (if available)" name="telegram">
+                                    <input type="text" class="form-control input-text" id="validationCustom03" placeholder="Phone" name="phone">
                                 </div>
 
                                 <div class="form-button text-center">
